# salamander

./: CMakeLists.txt  LICENSE  MainScene.cpp  MainScene.h  README.md  ResultsScene.cpp  ResultsScene.h  TheSalamander.cpp  TheSalamander.h  TitleScene.cpp  TitleScene.h  main.cpp
engine/: Engine.cpp  Engine.h  FollowCamera.cpp  FollowCamera.h  Game.h  GameObject.h  Logger.h  Mt19937Rng.h  RawFilesystem.cpp  RawFilesystem.h  RenderComponent.h  Scene.h  ServiceLocator.cpp  ServiceLocator.h  Services.h  Sprite.cpp  Sprite.h  SpriteRenderComponent.cpp  SpriteRenderComponent.h  Vector2D.h
engine/resource/: MappedTextureCache.h  TextureLoader.cpp  TextureLoader.h
objects/: Flame.cpp  Flame.h  Ground.h  House.cpp  House.h  Player.cpp  Player.h  Spike.cpp  Spike.h  StopWall.h
